[gd_scene load_steps=11 format=3 uid="uid://c5rkwg5eys0i7"]

[ext_resource type="Texture2D" uid="uid://bim8djyce1qbx" path="res://res/host.png" id="1_dgld7"]
[ext_resource type="Script" path="res://Scenes/in_lobby_menu/in_lobby_menu.gd" id="1_q1ny1"]
[ext_resource type="Texture2D" uid="uid://c351p80b4fgt" path="res://res/pawn.png" id="2_gtvi6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8xuo"]
bg_color = Color(0.596078, 0.560784, 0.882353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1e8h8"]
bg_color = Color(0.443137, 0.388235, 0.768627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vis2"]
bg_color = Color(0.372549, 0.313726, 0.678431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cix6r"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50adl"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4331"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3vu7"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="In Lobby Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q1ny1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.192157, 0.192157, 1)

[node name="Return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1052.0
offset_bottom = -629.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_o8xuo")
theme_override_styles/hover = SubResource("StyleBoxFlat_1e8h8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vis2")
text = "RETURN"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -650.0
offset_right = 650.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.384314, 0.72549, 0.901961, 1)
theme_override_font_sizes/font_size = 30
text = "GET READY FOR MATCH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lobby Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -650.0
offset_top = 141.0
offset_right = 650.0
offset_bottom = 244.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.941176, 0.176471, 0.419608, 1)
theme_override_font_sizes/font_size = 50
text = "LOBBY NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message_template" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 294.0
offset_right = 224.0
offset_bottom = 339.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.478431, 0.647059, 0.996078, 1)
theme_override_font_sizes/font_size = 30
text = "Some message:"

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1052.0
offset_top = 273.0
offset_bottom = -356.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_o8xuo")
theme_override_styles/hover = SubResource("StyleBoxFlat_1e8h8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vis2")
text = "START GAME"

[node name="Player List" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 294.0
offset_right = -718.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Players" type="VBoxContainer" parent="Player List"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.124069
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player List" type="Label" parent="Player List/Players"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.176471, 0.419608, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_cix6r")
text = "PLAYER LIST"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Player1" type="HBoxContainer" parent="Player List/Players"]
layout_mode = 2
size_flags_vertical = 0

[node name="Name" type="Label" parent="Player List/Players/Player1"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_50adl")
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Player List/Players/Player1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_dgld7")
expand_mode = 1
stretch_mode = 5

[node name="Player2" type="HBoxContainer" parent="Player List/Players"]
layout_mode = 2
size_flags_vertical = 0

[node name="Name" type="Label" parent="Player List/Players/Player2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r4331")
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Player List/Players/Player2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_gtvi6")
expand_mode = 1
stretch_mode = 5

[node name="Chat" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 582.0
offset_top = 344.0
grow_horizontal = 2
grow_vertical = 2

[node name="Chat Title" type="Label" parent="Chat"]
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.176471, 0.419608, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_b3vu7")
text = "CHAT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Chat"]
custom_minimum_size = Vector2(0, 252)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Chat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Submit" type="Control" parent="Chat"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10

[node name="Message" type="LineEdit" parent="Chat/Submit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Type in message to send!"

[node name="Submit_msg" type="Button" parent="Chat/Submit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 574.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SEND"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="text_submitted" from="Chat/Submit/Message" to="." method="_on_message_text_submitted"]
[connection signal="pressed" from="Chat/Submit/Submit_msg" to="." method="_on_submit_msg_pressed"]
